<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

<!-- HeaderText For list of toppings [CHAR lIMIT=20]  -->
    <string name="toppings">Toppings</string>

    <!-- tHANK you message For order summary Charlimit[20]  -->
    <string name="thank_you">Thank You!</string>

    <string name="name">Name</string>

    <!-- tHANK you message For order summary Charlimit[20]  -->
    <string name="whipped_cream">Whipped Cream</string>

    <string name="chocolate">Chocolate</string>

    <string name="order">Order</string>

    <string name="quantity">Quantity</string>


    <string name="initial_quantity_value">2</string>

    <string name="order_summary_name">Name:<xliff:g id="name" example="Amy">%s</xliff:g> </string>


    <string name="order_summary_whipped_cream">Add whipped cream?<xliff:g id="addWhippedCream" example="true" >%b</xliff:g> </string>

    <string name="order_summary_chocolate">Add chocolate?<xliff:g id="addChocolate" example="true" >%b</xliff:g> </string>

    <string name="order_summary_quantity">quantity:<xliff:g id="quantity" example="2" >%d</xliff:g> </string>

    <string name="order_summary_price">Total:<xliff:g id="quantity" example="$10" >%s</xliff:g> </string>


    <string name="order_summary_email_subject">Just Java order for:<xliff:g id="quantity" example="Amy" >%s</xliff:g> </string>

</resources>